Fixed text in buttons not aligning with icons properly

--- a/src/cms/styles/components/_button.scss
+++ b/src/cms/styles/components/_button.scss
@@ -10,6 +10,8 @@
   font-weight: 500;
   font-size: 15px;
   text-decoration: none;
+  line-height: 24px;
+
   &__raised {
     @extend .button;
     color: color-light(4);
