--- a/src/cms/styles/components/fileInput.scss
+++ b/src/cms/styles/components/fileInput.scss
@@ -34,6 +34,7 @@
   &__label {
     margin-left: 8px;
     @include type('Roboto', medium, 14);
+    line-height: 24px;
   }
 
   label {
